--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="styles/style.css"/>
   <title>Hello, World!</title>
-</how are you>
+                      
 <body>
   <h1>
     Hello, World!
  it is Josephime
-</webdevelopmenty>
+</h1>
+</body>
 </html>
